# WaaCaa

./: CMakeLists.txt  LICENSE  README.md
entry/: EntryWin32.cpp  SystemTrayInterface.h  SystemTrayWin32.cpp  SystemTrayWin32.h
model/: Chart.cpp  Chart.h  DataRendering.cpp  DataRendering.h  Dataset.cpp  Dataset.h  GradationsUtils.cpp  GradationsUtils.h  Protocol.cpp  Protocol.h  ProtocolRequestListener.h  RequestUtils.h  ResponseUtils.h  Toolbar.cpp  Toolbar.h  Transformation2D.h
network/: NetworkService.cpp  NetworkService.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h
rendering/: GraphicContextDirect2d.cpp  GraphicContextDirect2d.h  GraphicContextInterface.h
resources/: Resource.h  Resource.rc
settings/: ChartSettings.cpp  ChartSettings.h  NetworkSettings.h  RenderringSettings.cpp  RenderringSettings.h
utils/: ColorUtils.h  Common.h  LinearBuffer.cpp  LinearBuffer.h  Log.cpp  Log.h  Matrix3x2.h  Rect.h  StringUtils.cpp  StringUtils.h  SubServiceInterface.h  System.cpp  System.h  SystemEvents.cpp  SystemEvents.h  Vec2d.h
window/: WindowInterface.cpp  WindowInterface.h  WindowListener.h  WindowService.cpp  WindowService.h  WindowWin32.cpp  WindowWin32.h
